# Typr

./: CMakeLists.txt  meson.build
.cache/clangd/index/: app.cpp.4131121D0D5824BE.idx  app.h.08726F57B552888E.idx  main.cpp.D65062B4A226FDA7.idx  objects.cpp.11CD8EA0AE6A0734.idx  objects.h.B9E91FCBCC225FF8.idx  raylib.h.55190A97595452F5.idx  raylib.h.9A4B482C99F34913.idx  renderer.cpp.A05FAC86DD474B48.idx  renderer.h.420D7A9352691120.idx
include/: app.h  events.h  game.h  objects.h  renderer.h  updater.h
src/: .main.cpp.swp  :w  app.cpp  events.cpp  game.cpp  main.cpp  objects.cpp  renderer.cpp  updater.cpp
